--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -3,6 +3,10 @@
     <string name="button_getting_started">Inizia</string>
     <string name="logo">Logo applicazione</string>
     <string name="textview_slogan">Leggi.\nIn modo intelligente</string>
+    <string name="forgot_password">Password dimenticata?</string>
+    <string name="new_account">Non hai ancora un account?</string>
+    <string name="register">Registrati</string>
+    <string name="google_login">Login con Google</string>
     <string name="navigation_bar_item_search">Cerca</string>
     <string name="navigation_bar_item_profile">Profilo</string>
     <string name="navigation_bar_item_saved">Salvati</string>
