commit registrazione fix + login

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -6,6 +6,7 @@
     <string name="check_login_data_message">Controllare i dati inseriti</string>
     <string name="error_email">La mail non è valida</string>
     <string name="error_password">La password non è valida</string>
+    <string name="error_username">Il nome utente non è valido</string>
     <string name="forgot_password">Password dimenticata?</string>
     <string name="password_confirm">Confirma Password</string>
     <string name="google_login">Login con Google</string>
