--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="email" translatable="false">E-mail</string>
     <string name="error_email">The email is invalid</string>
     <string name="error_password">The password is invalid</string>
+    <string name="error_username">The username is invalid</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="google_login">Login with Google</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
