--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -68,5 +68,6 @@
     <string name="placeholder_home_welcome">Ciao. username!</string>
     <string name="textview_home_continue_label">Continuiamo da dove eravamo rimasti</string>
     <string name="textview_trending_books">Libri in tendenza</string>
+    <string name="book_search_error">Si è verificato un errore durante la ricerca, riprova.</string>
 
 </resources>
