add basic home draft

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -72,5 +72,6 @@
     <string name="description_not_available">Questo libro non fornisce una descrizione. Sentiti libero di esplorarne il contenuto attraverso recensioni o commenti per ulteriori informazioni.</string>
     <string name="empty_search_snackbar">La barra di ricerca é vuota</string>
     <string name="textview_home_suggested">Suggeriti per te</string>
+    <string name="textview_new_books">Nuovi libri</string>
 
 </resources>
