added few icons refactored name of ViewModelFactory changed ViewModel creation in ViewModelFactory added dynamic behavior of CollectionFragment (on going) added navigation behavior on ProfileFragment added some strings resources

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -75,5 +75,8 @@
     <string name="textview_new_books">Nuovi libri</string>
     <string name="textview_loading">Caricamento...</string>
     <string name="rating_not_available">Valutazione non disponibile</string>
+    <string name="books">libri</string>
+    <string name="book">libro</string>
+    <string name="empty_collection">nessun libro in questa raccolta</string>
 
 </resources>
