draft for implementation of firebase

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -78,5 +78,9 @@
     <string name="books">libri</string>
     <string name="book">libro</string>
     <string name="empty_collection">nessun libro in questa raccolta</string>
+    <string name="unexpected_error">Si è verificato un errore inaspettato, perfavore riprova.</string>
+    <string name="error_login_user_message">Si è verificato un errore durante il login, perfavore riprova</string>
+    <string name="error_login_password_message">SI è verificato un errore durante il login, ricontrolla la tua password.</string>
+    <string name="error_no_google_account_found_message">Errore: nessun account google associato a questa mail</string>
 
 </resources>
