--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,5 +94,10 @@
     <string name="books">books</string>
     <string name="book">book</string>
     <string name="empty_collection">no books in this collection</string>
+    <string name="users_section">Users</string>
+    <string name="books_section">Books</string>
+    <string name="hint_search_users">Search another user</string>
+    <string name="placeholder_username" translatable="false">username</string>
+    <string name="textview_books_read">Books read:</string>
 
 </resources>
