--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,7 @@
     <string name="hint_search_users">Search another user</string>
     <string name="placeholder_username" translatable="false">username</string>
     <string name="textview_books_read">Books read:</string>
+    <string name="book_details">Book details</string>
+    <string name="error_author_not_found">Author not found</string>
 
 </resources>
