--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,13 @@
         <item>Other</item>
     </string-array>
 
+    <string-array name="visibility">
+        <item>Visibility</item>
+        <item>Public</item>
+        <item>Only Friends</item>
+        <item>Private</item>
+    </string-array>
+
     <string name="textview_comments_title">Comments</string>
     <string name="textview_description_title">Description</string>
     <string name="textview_icon_already_read">Already read?</string>
