--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,5 +114,9 @@
     <string name="settings_button_profile">Menu</string>
     <string name="user_details">User details</string>
     <string name="collection_settings_button">Collection\'s settings</string>
+    <string name="textview_followers">Followers</string>
+    <string name="textview_following">Following</string>
+    <string name="follow_button_string">Follow</string>
+    <string name="unfollow_button_string">Unfollow</string>
 
 </resources>
