--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -107,5 +107,6 @@
     <string name="unfollow_button_string">Smetti di seguire</string>
     <string name="content_description_background_book">Sfondo contenente una versione blurrata della copertina del libro.</string>
     <string name="content_description_add_to_collection">Bottone utilizzato per aggiungere un libro ad una collezione.</string>
+    <string name="snackbar_empty_comment">Non puoi inserire un commento vuoto.</string>
 
 </resources>
