--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,5 +121,6 @@
     <string name="content_description_background_book">A background containning a blurred version of the book\'s cover.</string>
     <string name="content_description_add_to_collection">Button used to add a book into a collection.</string>
     <string name="snackbar_empty_comment">You cannot enter an empty comment.</string>
+    <string name="delete_comment_button">Delete this comment</string>
 
 </resources>
