--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -53,7 +53,7 @@
     <string name="textview_comments_title">Commenti</string>
     <string name="textview_description_title">Descrizione</string>
     <string name="textview_icon_already_read">Già letto?</string>
-    <string name="textview_icon_readlist">ReadList</string>
+    <string name="textview_icon_add_to_collection">Aggiungi a …</string>
     <string name="textview_slogan">Leggi.\nIn modo intelligente</string>
     <string name="hint_search_book">Inserisci il titolo del libro</string>
     <string name="button_search">Cerca</string>
@@ -109,5 +109,13 @@
     <string name="content_description_add_to_collection">Bottone utilizzato per aggiungere un libro ad una collezione.</string>
     <string name="snackbar_empty_comment">Non puoi inserire un commento vuoto.</string>
     <string name="delete_comment_button">Elimina questo commento</string>
-
+    <string name="textview_add_to_collection_title">Seleziona una collezione</string>
+    <string name="button_create_new_collection">Crea una nuova collezione</string>
+    <string name="textview_collection_name_placeholder">Nome della collezione</string>
+    <string name="slash">/</string>
+    <string name="textview_hint_insert_collection_name">Inserisci il nome della collezione</string>
+    <string name="textview_make_collection_public">Rendi pubblica</string>
+    <string name="textview_visibility_description">Le collezioni rese pubbliche verranno mostrate sul tuo profilo e potranno essere visualizzate dai tuoi followers</string>
+    <string name="button_add_collection">Aggiungi collezione</string>
+    <string name="button_cancel_add_collection">Annulla</string>
 </resources>
