--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -119,4 +119,5 @@
     <string name="button_add_collection">Aggiungi collezione</string>
     <string name="button_cancel_add_collection">Annulla</string>
     <string name="snackbar_empty_collection_name">Il nome della collezione non può essere vuoto.</string>
+    <string name="create_new_collection">Crea una nuova collezione</string>
 </resources>
